# genetic-image-painter

./: .clang-format  .editorconfig  CMakeLists.txt  README.md  main.cpp
example/: lenna.data
